Fixed bug with project image stretching.

--- a/styles/widescreen-style.css
+++ b/styles/widescreen-style.css
@@ -352,15 +352,16 @@ ul {
   display: flex;
   align-items: center;
   flex-direction: column;
-  transform: translateY(-80px);
+  transform: translateY(-60px);
 }
 
 .project-img {
   width: 100%;
-  height: 220px;
+  min-height: 200px;
   justify-self: flex-start;
   border-radius: 5px;
   box-shadow: 0 0 10px 5px var(--main-black);
+  
 }
 
 .project-title {
@@ -444,7 +445,7 @@ ul {
   -moz-transition: height .5s;
   -o-transition: height .5s;
   transition: height .5s;
-  height: 500px;
+  height: 480px;
   border: 1px solid var(--main-lightblue);
 }
 
